# libpg_query

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  pg_parse_demo.cc  pg_query.h  pg_query_parse_fbe.hpp
.github/workflows/: ci.yml
fbe/: pg_query.fbe  pg_query_ptr.cpp  pg_query_ptr.h  pg_query_ptr_models.cpp  pg_query_ptr_models.h
scripts/: generate_protobuf_and_funcs.rb
src/: pg_query_fingerprint.c  pg_query_fingerprint.h  pg_query_internal.h  pg_query_normalize.c  pg_query_outfuncs_defs.cc  pg_query_outfuncs_fbe_cpp.cc  pg_query_parse.c  pg_query_parse_fbe.cc  pg_query_parse_plpgsql.c  pg_query_scan.c  pg_query_split.c
src/postgres/: src_backend_parser_parser.c  src_backend_parser_scan.c  src_pl_plpgsql_src_pl_comp.c  src_pl_plpgsql_src_pl_gram.c  src_pl_plpgsql_src_pl_scanner.c
src/postgres/include/: plpgsql.h
src/postgres/include/parser/: parser.h  scanner.h
test/: parse_fbe_test.cc
